--- a/3-lending/Ground_Finance/GroundWeb/src/index.css
+++ b/3-lending/Ground_Finance/GroundWeb/src/index.css
@@ -37,6 +37,12 @@ h1 {
   line-height: 1.1;
 }
 
+li {
+  list-style-type: none;
+  padding: 50px;
+  width: fit-content;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -67,4 +73,8 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+button.lender {
+  background-color: lightblue;
 }
