--- a/3-lending/Ground_Finance/GroundWeb/src/index.css
+++ b/3-lending/Ground_Finance/GroundWeb/src/index.css
@@ -39,7 +39,8 @@ h1 {
 
 li {
   list-style-type: none;
-  padding: 50px;
+  padding: 1em;
+  padding-top: 0em;
   width: fit-content;
 }
 
@@ -60,19 +61,6 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
 
 button.lender {
