--- a/scrypto-bond-frontend/styles/globals.css
+++ b/scrypto-bond-frontend/styles/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.section {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    position: relative;
+  }
