--- a/3-lending/demifi/web/src/app.css
+++ b/3-lending/demifi/web/src/app.css
@@ -4,7 +4,7 @@
   line-height: 24px;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: light;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
@@ -60,15 +60,13 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
+:root {
     color: #213547;
     background-color: #ffffff;
-  }
-  a:hover {
+}
+a:hover {
     color: #747bff;
-  }
-  button {
+}
+button {
     background-color: #f9f9f9;
-  }
 }
